fix: harden npm upgrade workflow auth

--- a/.github/workflows/npm-auto-upgrade.yml
+++ b/.github/workflows/npm-auto-upgrade.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ env.PR_TOKEN }}
+          persist-credentials: false
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -122,6 +124,13 @@ jobs:
             fs.writeFileSync(summaryPath, md);
           }
           NODE
+
+      - name: Validate PR token permissions
+        run: |
+          if [ "${PR_TOKEN}" = "" ]; then
+            echo "::error::PR token is not configured. Set the NPM_UPGRADE_TOKEN secret with a token that has repo scope."
+            exit 1
+          fi
 
       - name: Upload outdated comparison
         uses: actions/upload-artifact@v4
