--- a/.claspignore
+++ b/.claspignore
@@ -1,15 +1,18 @@
-node_modules/**
-.github/**
+# 忽略 Git 與 CI
 .git/**
+.github/**
+
+# Node.js / 測試檔案
+node_modules/**
 __tests__/**
 e2e/**
-dist/**
-build/**
 coverage/**
-.vscode/**
-scripts/**
-test/**
+*.test.*
+*.spec.*
 
-# 保留核心 Apps Script 原始碼與 HTML 模板，避免被誤忽略
-!src/**/*.gs
-!src/**/*.html
+# 專案配置檔
+package*.json
+jest.config.js
+tsconfig.json
+*.md
+*.lock
