--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -16,9 +16,31 @@ defaults:
     shell: bash
 
 jobs:
-  test-stage:
+  unit-tests:
     if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Setup Node 18"
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: "Install deps"
+        run: |
+          if [ -f package-lock.json ]; then npm ci; else npm install; fi
+
+      - name: "Run unit tests (Jest)"
+        run: npm test --if-present
+
+  test-stage:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [unit-tests]
     timeout-minutes: 25
 
     steps:
@@ -61,17 +83,57 @@ jobs:
         run: |
           node - <<'EOF'
           const fs = require('fs');
-          const m = JSON.parse(fs.readFileSync('appsscript.json','utf8'));
-          if (!m.webapp || !m.webapp.access || !m.webapp.executeAs) {
+          const path = require('path');
+
+          const cwd = process.cwd();
+          const candidates = [];
+
+          try {
+            const clasp = JSON.parse(fs.readFileSync(path.join(cwd, '.clasp.json'), 'utf8'));
+            if (clasp.rootDir) {
+              candidates.push(path.join(cwd, clasp.rootDir, 'appsscript.json'));
+            }
+          } catch (err) {
+            if (err.code !== 'ENOENT') {
+              console.warn('⚠️ 無法解析 .clasp.json：', err.message);
+            }
+          }
+
+          candidates.push(path.join(cwd, 'appsscript.json'));
+
+          let manifestPath = null;
+          for (const candidate of candidates) {
+            if (!candidate) continue;
+            if (fs.existsSync(candidate) && fs.statSync(candidate).isFile()) {
+              manifestPath = candidate;
+              break;
+            }
+          }
+
+          if (!manifestPath) {
+            console.error('找不到 appsscript.json（根目錄或 .clasp.json 的 rootDir 中都沒有）');
+            process.exit(1);
+          }
+
+          let manifest;
+          try {
+            manifest = JSON.parse(fs.readFileSync(manifestPath, 'utf8'));
+          } catch (err) {
+            console.error('appsscript.json 不是有效 JSON：', err.message);
+            process.exit(1);
+          }
+
+          if (!manifest.webapp || !manifest.webapp.access || !manifest.webapp.executeAs) {
             console.error('appsscript.json missing webapp.access/executeAs');
             process.exit(1);
           }
-          const okLog = ['STACKDRIVER','CLOUD','NONE'].includes(m.exceptionLogging||'STACKDRIVER');
+          const okLog = ['STACKDRIVER','CLOUD','NONE'].includes(manifest.exceptionLogging || 'STACKDRIVER');
           if (!okLog) {
-            console.error('exceptionLogging must be STACKDRIVER|CLOUD|NONE, got:', m.exceptionLogging);
+            console.error('exceptionLogging must be STACKDRIVER|CLOUD|NONE, got:', manifest.exceptionLogging);
             process.exit(1);
           }
-          console.log('webapp OK:', m.webapp, 'exceptionLogging=', m.exceptionLogging);
+          const rel = path.relative(cwd, manifestPath) || 'appsscript.json';
+          console.log('webapp OK:', manifest.webapp, 'manifest=', rel, 'exceptionLogging=', manifest.exceptionLogging);
           EOF
 
       # BEFORE snapshot（文字解析 fallback）
@@ -79,13 +141,66 @@ jobs:
         run: |
           set -e
           clasp deployments > before.txt || true
-          node -e "const fs=require('fs');const t=fs.readFileSync('before.txt','utf8');const lines=t.split(/\r?\n/);const map={};for(const L of lines){const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);if(m){map[m[1]]=m[2];}}fs.writeFileSync('before.map.json',JSON.stringify(map));console.log('BEFORE MAP:',map)"
+          clasp deployments --json > before.json || true
+          node -e "
+            const fs=require('fs');
+            const map={};
+
+            const safeRead=(file)=>{
+              try { return fs.readFileSync(file,'utf8'); } catch (err) { return ''; }
+            };
+
+            const jsonText=safeRead('before.json').trim();
+            if(jsonText){
+              try {
+                const parsed=JSON.parse(jsonText);
+                const list=Array.isArray(parsed)?parsed:(parsed&&Array.isArray(parsed.deployments)?parsed.deployments:[]);
+                for(const dep of list){
+                  const id=dep && dep.deploymentId;
+                  const ver=dep && dep.deploymentConfig && (dep.deploymentConfig.versionNumber ?? dep.deploymentConfig.version);
+                  if(id && (ver || ver===0)){
+                    map[id]=String(ver);
+                  }
+                }
+              } catch (err) {
+                console.warn('⚠️ 無法解析 before.json：', err.message);
+              }
+            }
+
+            if(!Object.keys(map).length){
+              const text=safeRead('before.txt');
+              const lines=text.split(/\r?\n/);
+              for(const L of lines){
+                const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
+                if(m){
+                  map[m[1]]=m[2];
+                }
+              }
+            }
+
+            fs.writeFileSync('before.map.json', JSON.stringify(map));
+            console.log('BEFORE MAP keys:', Object.keys(map));
+          "
 
       - name: "Ensure TEST_DEPLOYMENT_ID exists BEFORE"
         env:
           TEST_DEPLOYMENT_ID: ${{ secrets.TEST_DEPLOYMENT_ID }}
         run: |
-          node -e "const fs=require('fs');const id=process.env.TEST_DEPLOYMENT_ID;const map=JSON.parse(fs.readFileSync('before.map.json','utf8'));if(!id||!map[id]){console.error('TEST_DEPLOYMENT_ID not found.');process.exit(1);}console.log('Found test deployment BEFORE. Current version =',map[id]);"
+          node -e "
+            const fs=require('fs');
+            const id=(process.env.TEST_DEPLOYMENT_ID||'').trim();
+            if(!id){
+              console.error('Missing TEST_DEPLOYMENT_ID secret.');
+              process.exit(1);
+            }
+            const map=JSON.parse(fs.readFileSync('before.map.json','utf8'));
+            if(!map[id]){
+              const known=Object.keys(map);
+              console.error('TEST_DEPLOYMENT_ID not found. Known deployments: '+(known.length?known.join(', '):'(none)'));
+              process.exit(1);
+            }
+            console.log('Found test deployment BEFORE. Current version =', map[id]);
+          "
 
       # --- push & deploy to TEST ---
       - name: "Inject CI env (TEST)"
@@ -128,28 +243,56 @@ jobs:
         run: |
           set -e
           clasp deployments > after.txt || true
+          clasp deployments --json > after.json || true
           node -e "
             const fs=require('fs');
-            const id=process.env.TEST_DEPLOYMENT_ID;
-            const ver=process.env.NEW_VER;
-            const t=fs.readFileSync('after.txt','utf8');
-            const lines=t.split(/\r?\n/);
-            let cur=null;
-            for(const L of lines){
-              const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
-              if(m && m[1]===id){ cur=m[2]; break; }
+            const id=(process.env.TEST_DEPLOYMENT_ID||'').trim();
+            const ver=(process.env.NEW_VER||'').trim();
+            if(!id){ console.error('Missing TEST_DEPLOYMENT_ID secret.'); process.exit(1); }
+            if(!ver){ console.error('Missing NEW_VER env.'); process.exit(1); }
+
+            const map={};
+            const safeRead=(file)=>{ try { return fs.readFileSync(file,'utf8'); } catch (err) { return ''; } };
+
+            const jsonText=safeRead('after.json').trim();
+            if(jsonText){
+              try {
+                const parsed=JSON.parse(jsonText);
+                const list=Array.isArray(parsed)?parsed:(parsed&&Array.isArray(parsed.deployments)?parsed.deployments:[]);
+                for(const dep of list){
+                  const depId=dep && dep.deploymentId;
+                  const depVer=dep && dep.deploymentConfig && (dep.deploymentConfig.versionNumber ?? dep.deploymentConfig.version);
+                  if(depId && (depVer || depVer===0)){
+                    map[depId]=String(depVer);
+                  }
+                }
+              } catch (err) {
+                console.warn('⚠️ 無法解析 after.json：', err.message);
+              }
             }
-            if(!cur){ console.error('Dep ID not found AFTER'); process.exit(1); }
-            console.log('Deployment', id, 'now points to version', cur);
-            if(String(cur)!==String(ver)){
-              console.error('Version mismatch: expected', ver, 'got', cur);
+
+            if(!Object.keys(map).length){
+              const text=safeRead('after.txt');
+              const lines=text.split(/\r?\n/);
+              for(const L of lines){
+                const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
+                if(m){
+                  map[m[1]]=m[2];
+                }
+              }
+            }
+
+            const current=map[id];
+            if(!current){
+              console.error('TEST_DEPLOYMENT_ID not found AFTER. Known deployments: '+(Object.keys(map).length?Object.keys(map).join(', '):'(none)'));
               process.exit(1);
             }
+            if(current!==ver){
+              console.error('Deployment still points to', current, 'expected', ver);
+              process.exit(1);
+            }
+            console.log('Deployment updated to version', current);
           "
-
-      # --- Unit tests / E2E tests (可先無檔；--if-present 不會 fail) ---
-      - name: "Run unit tests (Jest)"
-        run: npm test --if-present
 
       - name: "Debug TEST_DEPLOYMENT_ID length"
         env:
@@ -184,7 +327,7 @@ jobs:
           echo "::error::TEST health check failed (code=${code} location=${loc})"; exit 1
 
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [test-stage]
     timeout-minutes: 20
@@ -222,13 +365,64 @@ jobs:
         run: |
           set -e
           clasp deployments > before.txt || true
-          node -e "const fs=require('fs');const t=fs.readFileSync('before.txt','utf8');const lines=t.split(/\r?\n/);const map={};for(const L of lines){const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);if(m){map[m[1]]=m[2];}}fs.writeFileSync('before.map.json',JSON.stringify(map));console.log('BEFORE MAP:',map)"
+          clasp deployments --json > before.json || true
+          node -e "
+            const fs=require('fs');
+            const map={};
+
+            const safeRead=(file)=>{ try { return fs.readFileSync(file,'utf8'); } catch (err) { return ''; } };
+
+            const jsonText=safeRead('before.json').trim();
+            if(jsonText){
+              try {
+                const parsed=JSON.parse(jsonText);
+                const list=Array.isArray(parsed)?parsed:(parsed&&Array.isArray(parsed.deployments)?parsed.deployments:[]);
+                for(const dep of list){
+                  const id=dep && dep.deploymentId;
+                  const ver=dep && dep.deploymentConfig && (dep.deploymentConfig.versionNumber ?? dep.deploymentConfig.version);
+                  if(id && (ver || ver===0)){
+                    map[id]=String(ver);
+                  }
+                }
+              } catch (err) {
+                console.warn('⚠️ 無法解析 before.json：', err.message);
+              }
+            }
+
+            if(!Object.keys(map).length){
+              const text=safeRead('before.txt');
+              const lines=text.split(/\r?\n/);
+              for(const L of lines){
+                const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
+                if(m){
+                  map[m[1]]=m[2];
+                }
+              }
+            }
+
+            fs.writeFileSync('before.map.json', JSON.stringify(map));
+            console.log('BEFORE MAP keys:', Object.keys(map));
+          "
 
       - name: "Ensure GAS_DEPLOYMENT_ID exists BEFORE"
         env:
           GAS_DEPLOYMENT_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
         run: |
-          node -e "const fs=require('fs');const id=process.env.GAS_DEPLOYMENT_ID;const map=JSON.parse(fs.readFileSync('before.map.json','utf8'));if(!id||!map[id]){console.error('GAS_DEPLOYMENT_ID not found.');process.exit(1);}console.log('Found prod deployment BEFORE. Current version =',map[id]);"
+          node -e "
+            const fs=require('fs');
+            const id=(process.env.GAS_DEPLOYMENT_ID||'').trim();
+            if(!id){
+              console.error('Missing GAS_DEPLOYMENT_ID secret.');
+              process.exit(1);
+            }
+            const map=JSON.parse(fs.readFileSync('before.map.json','utf8'));
+            if(!map[id]){
+              const known=Object.keys(map);
+              console.error('GAS_DEPLOYMENT_ID not found. Known deployments: '+(known.length?known.join(', '):'(none)'));
+              process.exit(1);
+            }
+            console.log('Found prod deployment BEFORE. Current version =', map[id]);
+          "
 
       - name: "Inject CI env (PROD)"
         env:
@@ -271,23 +465,55 @@ jobs:
           set -e
 
           clasp deployments > after.txt || true
+          clasp deployments --json > after.json || true
           node -e "
             const fs=require('fs');
-            const id=process.env.GAS_DEPLOYMENT_ID;
-            const ver=process.env.NEW_VER;
-            const t=fs.readFileSync('after.txt','utf8');
-            const lines=t.split(/\r?\n/);
-            let cur=null;
-            for(const L of lines){
-              const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
-              if(m && m[1]===id){ cur=m[2]; break; }
+            const id=(process.env.GAS_DEPLOYMENT_ID||'').trim();
+            const ver=(process.env.NEW_VER||'').trim();
+            if(!id){ console.error('Missing GAS_DEPLOYMENT_ID secret.'); process.exit(1); }
+            if(!ver){ console.error('Missing NEW_VER env.'); process.exit(1); }
+
+            const map={};
+            const safeRead=(file)=>{ try { return fs.readFileSync(file,'utf8'); } catch (err) { return ''; } };
+
+            const jsonText=safeRead('after.json').trim();
+            if(jsonText){
+              try {
+                const parsed=JSON.parse(jsonText);
+                const list=Array.isArray(parsed)?parsed:(parsed&&Array.isArray(parsed.deployments)?parsed.deployments:[]);
+                for(const dep of list){
+                  const depId=dep && dep.deploymentId;
+                  const depVer=dep && dep.deploymentConfig && (dep.deploymentConfig.versionNumber ?? dep.deploymentConfig.version);
+                  if(depId && (depVer || depVer===0)){
+                    map[depId]=String(depVer);
+                  }
+                }
+              } catch (err) {
+                console.warn('⚠️ 無法解析 after.json：', err.message);
+              }
             }
-            if(!cur){ console.error('Dep ID not found AFTER'); process.exit(1); }
-            console.log('Deployment', id, 'now points to version', cur);
-            if(String(cur)!==String(ver)){
-              console.error('Version mismatch: expected', ver, 'got', cur);
+
+            if(!Object.keys(map).length){
+              const text=safeRead('after.txt');
+              const lines=text.split(/\r?\n/);
+              for(const L of lines){
+                const m=L.match(/(AK[\w-]{20,}).*@([0-9]+)/);
+                if(m){
+                  map[m[1]]=m[2];
+                }
+              }
+            }
+
+            const current=map[id];
+            if(!current){
+              console.error('GAS_DEPLOYMENT_ID not found AFTER. Known deployments: '+(Object.keys(map).length?Object.keys(map).join(', '):'(none)'));
               process.exit(1);
             }
+            if(current!==ver){
+              console.error('Deployment still points to', current, 'expected', ver);
+              process.exit(1);
+            }
+            console.log('Deployment updated to version', current);
           "
 
       - name: "Health check (PROD)"
